# PySide6ElaWidgetTools

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-client.yml  build-example.yml  build-python-binding-windows.yml  build-python-binding.yml
.trae/skills/elawidgettools-pyside6/: SKILL.md
.trae/skills/pyside6-ui-dev/: SKILL.md
ElaPacketIO/: CMakeLists.txt
ElaWidgetTools/: CMakeLists.txt  ElaAppBar.cpp  ElaApplication.cpp  ElaRibbonBar.cpp  ElaRibbonBar.h  ElaRibbonGroup.cpp  ElaRibbonGroup.h  ElaRibbonTabBar.cpp  ElaRibbonTabBar.h  ElaScrollPageArea.cpp  ElaTabBar.cpp  ElaTabBar.h  ElaToolBar.cpp
ElaWidgetTools/private/: ElaCalendarPickerPrivate.cpp  ElaRibbonBarPrivate.h  ElaRibbonGroupPrivate.h  ElaRibbonTabBarPrivate.h
ElaWidgetToolsExample/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
PySide6Example/: main.py  mainwindow.py
PySide6Example/ExamplePage/: T_CodeEditor.py  T_Graphics.py  T_Home.py  T_Icon.py  T_LogWidget.py  T_Navigation.py  T_NewComponents.py  T_NewComponents2.py  T_Popup.py  T_Router.py  T_TableWidget.py  T_TreeView.py  T_UpdateWidget.py
PySide6Example/ModelView/: T_IconDelegate.py  T_IconModel.py  T_LogModel.py  T_TreeItem.py  T_TreeViewModel.py
bindings/: CMakeLists.txt  bindings.xml  fix_class_name.py  fix_install_names.py  fix_out_params.py  global.h
doc/: API.md
scripts/: generate_bindings.py
